# allscale_runtime

./: .gitmodules  .project  @  BUILD.info  CMakeCache.txt  CMakeLists.txt  README.md  \  apex.0.csv
OTF2_archive/: .metrics.0  .regions.0  APEX.def  APEX.otf2
OTF2_archive/APEX/: 0.evt  1.evt  10.evt  11.evt  12.evt  13.evt  14.evt  15.evt  16.evt  17.evt  18.evt  19.evt  2.evt  20.evt  3.evt  4.evt  5.evt  6.evt  7.evt  9.evt
allscale/: .data_item.hpp.swn  .data_item.hpp.swo  .data_item.hpp.swp  .data_item_manager.hpp.swp  .data_item_server.hpp.swo  .data_item_server.hpp.swp  .fragment.hpp.swp  .treeture.hpp.swp  access_mode.hpp  access_privilege.hpp  config.hpp  dashboard.hpp  data_item.hpp  data_item_base.hpp  data_item_description.hpp  data_item_manager.hpp  data_item_manager_impl.hpp  data_item_manager_server.hpp  data_item_reference.cpp  data_item_reference.hpp  data_item_requirement.hpp  data_item_server.hpp  data_item_server.hpp_old  data_item_server_network.hpp  data_requirements_check.hpp  do_serialization.hpp  do_use_data_items.hpp  fragment.hpp  get_num_localities.hpp  get_num_numa_nodes.hpp  hierarchy.hpp  historical_data.hpp  lease.hpp  locality.h  location_info.hpp  measure_buffer.hpp  monitor.hpp  no_data_items.hpp  no_serialization.hpp  no_split.hpp  (+28 more)
allscale/components/: .fragment.hpp.swp  data_item.hpp  data_item_manager_server.hpp  data_item_network.hpp  fragment.hpp  fragment_view.hpp  internodeoptimizer.hpp  localoptimizer.hpp  monitor.hpp  nmd.hpp  nmsimplex_bbincr.hpp  resilience.hpp  scheduler.hpp  scheduler_network.hpp  treeture.hpp  treeture_buffer.hpp
allscale/data_item_manager/: acquire.hpp  acquire_rank.hpp  add_allowance.hpp  check_write_requirements.hpp  data_item.hpp  data_item_store.hpp  data_item_view.hpp  fragment.hpp  get_missing_regions.hpp  get_ownership_json.hpp  index_service.hpp  locate.hpp  location_info.hpp  mark_child_requirements.hpp  mark_write_requirements.hpp  shared_data.hpp  show.hpp  task_requirements.hpp
allscale/detail/: futurize_if.hpp  treeture_lco.hpp  treeture_task.hpp  unwrap_if.hpp  work_item_impl.hpp  work_item_impl_base.hpp
allscale/traits/: data_item_traits.hpp  is_data_item.hpp  is_fragment.hpp  is_region.hpp  is_treeture.hpp  region_traits.hpp  treeture_traits.hpp
allscale/util/: graph_colouring.hpp  hardware_reconf.hpp  readers_writers_mutex.hpp
cmake/: FindCPUFREQ.cmake
examples/: CMakeLists.txt  README  fibonacci.cpp  ipic3d_allscalecc.cpp  ipic3d_allscalecc_data.cpp  pic_tracer.cpp  stencil_1d_pfor.cpp  stencil_2d_pfor.cpp  stencil_2d_uneven.cpp
examples/amdados/: amdados.conf  amdados_generated.cpp  amdados_report.html
examples/basic_insieme/: CMakeLists.txt  basic.insieme.seq.cpp
examples/pfor/: .fine_grained_with_data_items.cpp.swp  CMakeLists.txt  chain.cpp  fine_grained.cpp  fine_grained_with_data_items.cpp  pfor.h  pfor.hpp  pfor_with_data_items.hpp  single.cpp
examples/uts/: CMakeLists.txt  params.hpp  sample_trees.csh  sample_trees.sh  uts.cpp  uts.hpp
examples/uts/rng/: alfg.cpp  brg_sha1.cpp
src/: .data_item_reference.cpp.swp  CMakeLists.txt  dashboard.cpp  data_item_reference.cpp  data_item_store.cpp  data_requirements_check.cpp  get_num_localities.cpp  get_num_numa_nodes.cpp  hierarchy.cpp  monitor.cpp  optimizer.cpp  resilience.cpp  schedule_policy.cpp  scheduler.cpp  task_id.cpp  task_times.cpp  this_work_item.cpp  treeture.cpp  tuner.cpp
src/cmake/: FindCPUFREQ.cmake
src/components/: data_item_network.cpp  internodeoptimizer.cpp  localoptimizer.cpp  monitor_component.cpp  nmd.cpp  nmsimplex_bbincr.cpp  resilience_component.cpp  scheduler_component.cpp  scheduler_network.cpp
src/components/util/: graph_colouring.cpp  hardware_reconf.cpp
src/data_item/: get_ownership_json.cpp  index_service.cpp
src/detail/: work_item_impl_base.cpp
tests/: CMakeLists.txt
tests/performance/: .nfs00000000002800c70000001d  .stencil.cpp.swp  CMakeLists.txt  data_item_get.cpp  data_item_get_invariant.cpp  fibonacci-dump-trg.cpp  fibonacci-manual.cpp  heat_stencil-dump-trg.cpp  matrix-dump-trg.cpp  matrix-manual.cpp  pi-dump-trg.cpp  quicksort-dump-trg.cpp  stencil.cpp  stream.cpp  tpc.allscalecc.latency_n29.cpp  tpc.allscalecc.latency_n30.cpp  tpc.allscalecc.latency_n32.cpp  tpc.allscalecc.latency_n34.cpp  tpc.allscalecc.latency_n36.cpp  tpc.allscalecc.throughput_2_n29.cpp  tpc.allscalecc.throughput_2_n30.cpp  tpc.allscalecc.throughput_2_n32.cpp  tpc.allscalecc.throughput_2_n34.cpp  tpc.allscalecc.throughput_2_n36.cpp  tpc.allscalecc.throughput_n29.cpp  tpc.allscalecc.throughput_n30.cpp  tpc.allscalecc.throughput_n32.cpp  tpc.allscalecc.throughput_n34.cpp  tpc.allscalecc.throughput_n36.cpp  transpose.cpp  two_point_correlation.allscale.cpp  two_point_correlation.allscale.n29.cpp  two_point_correlation.allscale.n29.v2.cpp  two_point_correlation.allscale.n32.cpp  two_point_correlation.allscale.n34.cpp  two_point_correlation.cpp  vector_add-dump-trg.cpp
tests/regressions/: CMakeLists.txt  async_basic_basic.insieme.seq.cpp  async_capture_mutable_reference_capture_mutable_reference.insieme.seq.cpp  async_capture_reference_capture_reference.insieme.seq.cpp  async_capture_value_capture_value.insieme.seq.cpp  async_side_effects_side_effects.insieme.seq.cpp  basic_basic.insieme.seq.cpp  cmd_options_optimized_optimized.insieme.seq.cpp  cmd_options_unoptimized_unoptimized.insieme.seq.cpp  empty_main.1.cpp  empty_main.cpp  fib_eager_fib_eager.insieme.seq.cpp  grid_init.insieme.seq.cpp  grid_stencil.insieme.seq.cpp  grid_stencil_2d_particles.insieme.seq.cpp  insieme-src-195b1d7e.cpp  insieme-src-1a9e077a.cpp  insieme-src-1a9e077a.cpp.cpp  insieme-src-228d4e56.cpp  insieme-src-30e0e74e.cpp  insieme-src-30e0e74e.cpp.cpp  insieme-src-35234a9a.cpp  insieme-src-35234a9a.cpp.cpp  insieme-src-405ca12d.cpp  insieme-src-405ca12d.cpp.cpp  insieme-src-52b53f54.cpp  insieme-src-532a1abf.cpp  insieme-src-5637e0f0.cpp.cpp  insieme-src-5b0f1c59.cpp.cpp  insieme-src-5ca530c2.cpp  insieme-src-6f8b4b6b.cpp  insieme-src-7707e4bb.cpp  (+41 more)
tools/: fixup_allscalecc.py  generate_data_item_report.py  plot_heatmap.gnuplot
(+42 files in other folders)
